--- a/client/css/login.css
+++ b/client/css/login.css
@@ -1,10 +1,10 @@
 #loginform{
     width: 50%;
     background-color: aqua;
+    margin:auto;
 }
-body{
-    background-color: red;
-}
+
 h1{
-    color: blue;
+    color: blue; 
+    margin: auto;
 }
