--- a/client/css/homeproject.css
+++ b/client/css/homeproject.css
@@ -8,7 +8,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 20px 30px 20px 0px;
+    padding: 0px;
+    margin: 20px 30px 20px 20px;
 }
 .navbar-list-div{
     display: flex;
@@ -27,3 +28,55 @@
     font-size: 18px;
 }
 /* search section */
+h3{
+    margin-left: 20px;
+}
+h3>a{
+    text-decoration: none;
+    cursor: pointer;
+    color: black;
+}
+/* Grid Section */
+#Grid-carousal{
+    margin-left: 20px;
+display: grid;
+grid-template-columns: auto auto;
+gap: 100px;
+
+}
+#paragraph>h1{
+margin-bottom: 0px;
+}
+#paragraph>p{
+    margin-bottom: 0px;
+    font-weight: bold;
+}
+.bi-arrow-right{
+    margin-left: 50px;
+    font-size: 25px;
+}
+#para-btn{
+    margin-top: 150px;
+    width: 40%;
+    background-color: #D9D9D9;
+    padding: 0px 35px 0px 0px;
+    font-size: 18px;
+    border: transparent;
+}
+
+#carousel{
+    max-width: 80%;
+}
+.carousel-control-btn{
+  border: none transparent;
+    background-color: transparent;
+}
+.carousel-control-btn2{
+     border: none transparent;
+    background-color: transparent;
+}
+.carousel-item>img{
+    border: 2px solid black;
+    width: 300px;
+    height: 400px;
+}
