--- a/client/css/homeproject.css
+++ b/client/css/homeproject.css
@@ -56,11 +56,12 @@ margin-bottom: 0px;
     font-size: 25px;
 }
 #para-btn{
+    margin-right: 30px;
     margin-top: 150px;
     width: 40%;
     background-color: #D9D9D9;
     padding: 0px 35px 0px 0px;
-    font-size: 18px;
+    font-size: 20px;
     border: transparent;
 }
 
