--- a/client/css/homeproject.css
+++ b/client/css/homeproject.css
@@ -1,6 +1,7 @@
 body{
     width: 80%;
-    margin-left: 30px;
+    /* margin-left: 30px; */
+    margin: auto;
     border: 2px solid;
 }
 /* Navigation bar */
