--- a/client/css/homeproject.css
+++ b/client/css/homeproject.css
@@ -128,10 +128,10 @@ grid-template-columns: auto auto auto;
 margin-left: 10%;
 margin-right: 10%;
 }
-#xivSectin-grid-card-text{
+.xivSectin-grid-card-text{
     display: flex;
 }
-#xivSectin-grid-card-text>p{
+.xivSectin-grid-card-text>p{
     margin-left: 15%;
 }
 #xivSectin-more{
